--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1">
   <title>Great Idea - Responsive I</title>
-
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
@@ -12,5 +11,84 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <div class="container">
+    <header>
+      <nav class="navigator">
+        <a href="services.html" class="link_nav">Services</a>
+        <a href="#" class="link_nav">Product</a>
+        <a href="#" class="link_nav">Vision</a>
+        <a href="#" class="link_nav">Features</a>
+        <a href="#" class="link_nav">About</a>
+        <a href="#" class="link_nav">Contact</a>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </nav>
+
+      
+    </header>
+
+    <div class="splash">
+      <div class="block left_text">
+        <h1>Innovation<br>
+        On<br>
+        Demand</h1>
+
+        <button type="left_button">Get Started</button>
+      </div>
+
+      <img src="img/header-img.png" alt="Image of a code snippet." class="ball_img">
+    </div>
+
+    <hr>
+
+    <section class="content">
+      <div class="block">
+        <div class="content_top">
+          <h2>Features</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+
+        <div class="content_top">
+          <h2>About</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </div>
+    </section>
+
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    
+    <section class="content">
+      <div class="block">
+        <div class="content_bottom">
+          <h2>Services</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div> 
+
+        <div class="content_bottom">
+          <h2>Product</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+
+        <div class="content_bottom">
+          <h2>Vision</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+
+    <footer>
+      <h3>Contact</h3>
+      <address>
+        123 Way 456 Street<br>
+        Somewhere, USA<br><br>
+        1 (888) 888-8888<br><br>
+        <a href="mailto:sales@greatidea.io">sales@greatidea.io</a>
+    </address>
+
+      <p class="copyright">Copyright Great Idea! 2018</p>
+    </footer>
+</div>
+
 </body>
 </html>
