--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <a href="#" class="link_nav">Features</a>
         <a href="#" class="link_nav">About</a>
         <a href="#" class="link_nav">Contact</a>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
       </nav>
+
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
       
     </header>
@@ -37,8 +38,6 @@
 
       <img src="img/header-img.png" alt="Image of a code snippet." class="ball_img">
     </div>
-
-    <hr>
 
     <section class="content">
       <div class="block">
@@ -56,7 +55,7 @@
 
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
     
-    <section class="content">
+    <section class="content2">
       <div class="block">
         <div class="content_bottom">
           <h2>Services</h2>
@@ -74,8 +73,6 @@
         </div>
       </div>
     </section>
-
-    <hr>
 
     <footer>
       <h3>Contact</h3>
